--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ listAllRegions.txt
 commands/__pycache__/listallregions.cpython-39.pyc
 commands/__pycache__/printallregions.cpython-39.pyc
 commands/__pycache__/welcome.cpython-39.pyc
+commands/__pycache__/region.cpython-39.pyc
