--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ commands/__pycache__/listallregions.cpython-39.pyc
 commands/__pycache__/printallregions.cpython-39.pyc
 commands/__pycache__/welcome.cpython-39.pyc
 commands/__pycache__/region.cpython-39.pyc
+commands/__pycache__/listallregions.cpython-311.pyc
+commands/__pycache__/listcommands.cpython-311.pyc
+commands/__pycache__/printallregions.cpython-311.pyc
+commands/__pycache__/region.cpython-311.pyc
+commands/__pycache__/search.cpython-311.pyc
+commands/__pycache__/welcome.cpython-311.pyc
