working on something

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ commands/__pycache__/printallregions.cpython-311.pyc
 commands/__pycache__/region.cpython-311.pyc
 commands/__pycache__/search.cpython-311.pyc
 commands/__pycache__/welcome.cpython-311.pyc
+commands/__pycache__/notifications.cpython-311.pyc
