--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ commands/__pycache__/region.cpython-311.pyc
 commands/__pycache__/search.cpython-311.pyc
 commands/__pycache__/welcome.cpython-311.pyc
 commands/__pycache__/notifications.cpython-311.pyc
+commands/__pycache__/version.cpython-311.pyc
