--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,6 +30,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install nintendeals
         pip install art==6.0
+        pip install colorama
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
