--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ commands/__pycache__/region.cpython-312.pyc
 commands/__pycache__/search.cpython-312.pyc
 commands/__pycache__/version.cpython-312.pyc
 commands/__pycache__/welcome.cpython-312.pyc
+commands/__pycache__/online.cpython-312.pyc
+commands/__pycache__/save.cpython-312.pyc
