--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ commands/__pycache__/version.cpython-312.pyc
 commands/__pycache__/welcome.cpython-312.pyc
 commands/__pycache__/online.cpython-312.pyc
 commands/__pycache__/save.cpython-312.pyc
+commands/__pycache__/settings.cpython-312.pyc
